update Assignment.html using Semantic html

--- a/Assignment.html
+++ b/Assignment.html
@@ -1,12 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
+<!---Header---->
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bandung</title>
 </head>
+<!--Header-->
+
 <body>
+    <!-- Header -->
+    <header>
     <h1>Bandung</h1>
+    <!-- Nav Bar -->
+    <nav>
+        <h4>Table of content:</h4>
+        <ul>
+        <li>
+            <a href="Capital_city.html">Capital City</a>
+        </li>
+        <li>
+            <a href="West_java.html">West_java</a>
+        </li>
+        </ul>
+    </nav>
+    </header>
+    <!-- Main component -->
+    <article>
     <p><strong>Bandung</strong> is the 
         <i><a href="Capital_city.html"> capital city</a></i>
         of the 
@@ -15,10 +35,17 @@
         <li>Total Area: 167.31 km<sup>2</sup></li>
         <li>Population: 2,528,163</li>
     </ul>
+    </article>
     <img
         src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/43/Bandung_View_dari_Gedung_Wisma_HSBC_Asia_Afrika_4.jpg/1920px-Bandung_View_dari_Gedung_Wisma_HSBC_Asia_Afrika_4.jpg"
         alt="Bandung"
         width="500px"
     />
+    <hr />
+    <!-- Footer -->
+    <footer>
+        This is a footer &copy;Copyright.
+    </footer>
 </body>
+
 </html>
