--- a/Assignment.html
+++ b/Assignment.html
@@ -35,12 +35,50 @@
         <li>Total Area: 167.31 km<sup>2</sup></li>
         <li>Population: 2,528,163</li>
     </ul>
+    <table border="2">
+        <tr>
+            <td>Total Area</td>
+            <td>167.31 km<sup>2</sup></td>
+        </tr>
+        <tr>
+            <td>Population</td>
+            <td>2,528,163</td>
+        </tr>
+    </table>
     </article>
     <img
         src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/43/Bandung_View_dari_Gedung_Wisma_HSBC_Asia_Afrika_4.jpg/1920px-Bandung_View_dari_Gedung_Wisma_HSBC_Asia_Afrika_4.jpg"
         alt="Bandung"
         width="500px"
     />
+    <section>
+        <h2>Share your Thoughts</h2>
+        <form action="#" method="post">
+            <label for="name">Full Name:</label><br />
+            <input
+                Type="text"
+                id="name"
+                name="name"
+                placeholder="Enter Your Name"
+                required
+            /><br /><br />
+            <label for ="checkbox">Checkbox</label>
+            <input
+                type="checkbox"
+                id="checkbox"
+                placeholder="Please"
+            /><br /><br />
+            <label for="feedback">Your Feedback:</label><br />
+        <textarea
+        id="feedback"
+        name="feedback"
+        rows="5"
+        cols="40"
+        placeholder="Write your feedback here..."
+        ></textarea
+        ><br /><br />
+        </form>
+    </section>
     <hr />
     <!-- Footer -->
     <footer>
