--- a/West_java.html
+++ b/West_java.html
@@ -8,7 +8,7 @@
 <body>
     <h1>test</h1>
     <p><i>This is a</i> <strong>paragraph</strong></p>
-
+    <article>
     <ul>
         <li>Item1</li>
         <li>Item2</li>
@@ -20,7 +20,7 @@
         <li>Item 2</li>
         <li>Item 3</li>
     </ol>
-
+</article>
     <img
         src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/4d/Cat_November_2010-1a.jpg/800px-Cat_November_2010-1a.jpg"
         alt= "Tabby Cat "
