update Assignment. html using Semnatic html, form element and table component

--- a/Assignment.html
+++ b/Assignment.html
@@ -82,7 +82,7 @@
     <hr />
     <!-- Footer -->
     <footer>
-        This is a footer &copy;Copyright.
+        This is a footer &copy;Copyright. 2028 made in 2023
     </footer>
 </body>
 
