update Assignment. html using Semnatic html, form element and table component

--- a/West_java.html
+++ b/West_java.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Html structure</title>
 </head>
+<main>
 <body>
     <h1>test</h1>
     <p><i>This is a</i> <strong>paragraph</strong></p>
@@ -29,4 +30,5 @@
 
 
 </body>
+</main>
 </html>
