--- a/Assignment.html
+++ b/Assignment.html
@@ -7,7 +7,7 @@
     <title>Bandung</title>
 </head>
 <!--Header-->
-
+<main>
 <body>
     <!-- Header -->
     <header>
@@ -35,7 +35,7 @@
         <li>Total Area: 167.31 km<sup>2</sup></li>
         <li>Population: 2,528,163</li>
     </ul>
-    <table border="2">
+    <table border="1">
         <tr>
             <td>Total Area</td>
             <td>167.31 km<sup>2</sup></td>
@@ -85,5 +85,6 @@
         This is a footer &copy;Copyright. 2028 made in 2023
     </footer>
 </body>
+</main>
 
 </html>
